<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC9RZ2X9AU3r798fU7kkV-4u4i_ghh2yVE</string>

    <string name="app_name">WhatsUpBooBoo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="garage_name">車廠名稱</string>
    <string name="garage_addr">車廠地址</string>
    <string name="garage_dist">車廠距離</string>
    <string name="call_button">撥打電話</string>

    <string name="listview_name">車廠名稱</string>
    <string name="listview_address">車廠地址</string>
    <string name="listview_dist">車廠距離</string>
    <string name="listview_call_btn">撥打電話</string>
    <string name="debug_service_info">連線資訊</string>

    <string name="info_name">@string/listview_name</string>
    <string name="info_address">@string/listview_address</string>
    <string name="info_phone">車廠電話</string>

    <string name="info_offer_label">優惠</string>
    <string name="info_comment_label">相關評論</string>

    <string name="comment_name">評論者</string>
    <string name="comment_time">2016年12月26日 12:05 PM  ·  2 ★</string>
    <string name="comment_content">評論內容</string>
    <string name="comment_no_data">目前沒有關於保養廠的評論喔</string>
    <string name="comment_write_btn">撰寫評論</string>
    <string name="comment_like_level">您對保養廠的滿意程度</string>
    <string name="comment_add_comment">寫下您對保養廠的評論</string>

    <string name="coupon_name">優惠名稱</string>
    <string name="coupon_time">優惠期限</string>
    <string name="coupon_content">優惠內容</string>
    <string name="coupon_no_data">目前沒有優惠活動</string>

    <!-- CarInfo String Resource -->
    <string name="dtcHistoryTitle">故障碼歷史紀錄</string>
    <string name="status_not_connect">藍芽未連接</string>
    <string name="status_healthy">健康</string>
    <string name="status_not_healthy">故障</string>
    <string name="record">Record</string>
    <string name="monitor">Monitor</string>
    <string name="bluetoothNotAvailable">你的裝置不支援藍芽喔</string>
    <string name="bluetoothNotEnabled">您的藍芽還沒開啟喔</string>

    <!-- Record -->
    <string name="maintain_time">保養日期</string>
    <string name="maintain_history">保養內容記錄</string>
    <string name="maintain_place">保養地點</string>
</resources>
