<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/comment_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comment_name"
            android:id="@+id/comment_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingStart="15dp"
            android:minHeight="40dp"
            android:textSize="14sp"
            android:gravity="left|center_vertical"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:layout_alignParentLeft="true"
            android:paddingLeft="15dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comment_time"
            android:id="@+id/comment_time"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/comment_name"
            android:minHeight="40dp"
            android:textSize="11sp"
            android:gravity="center_vertical"
            android:textColor="@color/primary_dark_material_light"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:layout_toRightOf="@+id/comment_name"
            android:paddingRight="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comment_content"
            android:id="@+id/comment_content"
            android:layout_below="@+id/comment_name"
            android:layout_alignParentStart="true"
            android:paddingStart="15dp"
            android:textSize="14sp"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:lineSpacingMultiplier="1.3"
            android:maxLength="70"
            android:maxLines="5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>